Fixed 'mobile menu not visible' on tablet

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -38,8 +38,14 @@
   }
 
   .menuMobile {
+    .logoMobile {
+      display: none;
+      @media all and (max-width: $screen-sm) {
+        display: initial;
+      }
+    }
     display: none;
-    @media all and (max-width: $screen-sm) {
+    @media all and (max-width: $screen-md) {
       display: initial;
     }
     .notVisible {
